# ProcShark

./: .gitignore  LICENSE  README.md  procshark.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
core/: __init__.py  __main__.py  capture.py  cli.py  display.py  export.py  process.py  protocols.py  stats.py
tests/: __init__.py  test_protocols.py
